fix: spacing for content headers

--- a/assets/sass/patterns/atoms/social-media-sharers.scss
+++ b/assets/sass/patterns/atoms/social-media-sharers.scss
@@ -18,7 +18,7 @@
   .modal-content & {
     flex-basis: auto;
     @include margin(0);
-    @include margin(24, "bottom");
+    @include margin(12, "bottom");
     @include padding(0);
     justify-content: center;
 
